--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -4,6 +4,6 @@ parameters:
 #    parameter_name: value
 
 services:
-    app.example:
-        class: AppBundle\Service\ExampleService
+    app.post:
+        class: AppBundle\Service\PostService
         arguments: ["@doctrine.orm.entity_manager"]
